@@ -3,3 +3,16 @@
 用控制台玩杀戮尖塔 
 
 基于spring-shell java 21 构建
+
+
+#### 运行游戏
+```shell
+# 1. 打包构建
+gradlew build
+# 2. 运行jar  注意启用预览功能
+java -jar --enable-preview slay-the-spire-0.0.1-alpha.jar
+# 3. 开始游戏
+game start
+```
+
+**输入help查看可执行的命令** 
